testing/macro-tests/tests/ui/default_enum_payload_bound.stderr
error[E0277]: the trait bound `icydb::prelude::Principal: Default` is not satisfied
  --> tests/ui/default_enum_payload_bound.rs:3:1
   |
 3 | / #[enum_(
 4 | |     variant(
 5 | |         ident = "Principal",
 6 | |         value(item(prim = "Principal")),
...  |
10 | |     traits(add(Default))
11 | | )]
   | |__^ the trait `Default` is not implemented for `icydb::prelude::Principal`
   |
   = note: this error originates in the attribute macro `enum_` (in Nightly builds, run with -Z macro-backtrace for more info)
